<resources>
    <string name="app_name" translatable="false">JB App</string>
    <string name="app_author" translatable="false">by doowzs (2018)</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Titles -->
    <string name="title_activity_main">Assignments</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_menu">Menu</string>

    <!-- Navigation Bar -->
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Logout</string>

    <!-- Button Labels -->
    <string name="btn_update">Check Update</string>
    <string name="btn_changelog">Change Log</string>
    <string name="btn_rtfsc" translatable="false">RTFSC</string>

    <!-- Welcome Screen -->
    <string name="welcome_back">Welcome back,</string>
    <string name="version">Version</string>

    <!-- Strings related to update -->
    <string name="update_title">Update available</string>
    <string name="update_contents">Version info:\n</string>
    <string name="update_current_version">Current Version:</string>
    <string name="update_latest_version">Latest Version:</string>
    <string name="update_confirm">Do you want to update now?</string>

    <!-- Strings related to login -->
    <string name="prompt_student_id">Student ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in to JB Online</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_student_id">This student ID is invalid.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_auth_failure_title">Auth Failure</string>
    <string name="error_auth_failure_content">Credential is not correct or token has expired. You need to login again.</string>

    <!-- Strings related to assignments -->
    <string name="assignment_mark_finished_title">Finished?</string>
    <string name="assignment_mark_finished_content">Are you sure you want to mark the folloing assignment as finished?</string>
    <string name="assignment_mark_unfinished_title">Not finished?</string>
    <string name="assignment_mark_unfinished_content">Are you sure you want to mark the folloing assignment as unfinished?</string>
    <string name="assignment_mark_progressing_left">Updating the status of assignment</string>
    <string name="assignment_mark_progressing_right">&#8230;</string>

    <!-- Main Activity -->
    <string name="info_updated">Assignments updated.</string>
    <string name="info_no_assignment">There is no assignment to do.</string>
    <string name="assignment_count_left">&#8212; Found</string>
    <string name="assignment_count_right">assignments in total &#8212;</string>
    <string name="confirm_logout_title">Logout confirm</string>
    <string name="confirm_logout_content">"Are you sure you want to logout from JB App?\n        \n\nCurrent logged in credential: \n\n    "</string>

    <!-- Change Log -->
    <string name="string_changelog" translatable="false">
        v0.1 2018-12-09
        \n - Mark assignment as finished/unfinished
        \n - Check update of app using API
        \n - Code rebase and UX update

        v0.0 2018-12-07
        \n - Sign in/out using JB Online\'s APIs
        \n - Fetch ongoing assignments and list in CardViews
        \n - Pretty time for formatted DDL display (may need further dev)
        \n - Error detection and handle for bad auth credentials
    </string>
</resources>
